flat fix submenuwrap

--- a/design/openpa_flat/scss/_pagelayout.scss
+++ b/design/openpa_flat/scss/_pagelayout.scss
@@ -231,24 +231,6 @@ body{
   position: absolute;
   left: 0;
   width: 200px;
-  &.items-2{
-    width: $submenu_item_width * 2 + 20px;
-  }
-  &.items-3{
-    width: $submenu_item_width * 3 + 20px;
-  }
-  &.items-4{
-    width: $submenu_item_width * 4 + 20px;
-  }
-  &.items-5{
-    width: $submenu_item_width * 5 + 20px;
-  }
-  &.items-6{
-    width: $submenu_item_width * 5;
-    .sub_menu-item{
-      width: $submenu_item_width - 40px;
-    }
-  }
   @extend .w_xs_auto;
   padding: 0;
   background: #fff;
@@ -267,7 +249,7 @@ body{
   -ms-transform: translateY(35px);
   transform: translateY(35px);
   opacity: 0;
-  visibility: hidden;  
+  visibility: hidden;
   &:after {
     content: "";
     width: 100%;
