--- a/design/openpa_flat/scss/flat/_responsive.scss
+++ b/design/openpa_flat/scss/flat/_responsive.scss
@@ -216,6 +216,24 @@
     -moz-transition:none;
     -o-transition:none;
     transition:none;
+    &.items-2{
+      width: $submenu_item_width * 2 + 20px;
+    }
+    &.items-3{
+      width: $submenu_item_width * 3 + 20px;
+    }
+    &.items-4{
+      width: $submenu_item_width * 4 + 20px;
+    }
+    &.items-5{
+      width: $submenu_item_width * 5 + 20px;
+    }
+    &.items-6{
+      width: $submenu_item_width * 5;
+      .sub_menu-item{
+        width: $submenu_item_width - 40px;
+      }
+    }
   }
   .main_menu > li.menu-item > a{
     background:#fff;
